--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Croissants</title>
+    <meta
+      name="description"
+      content="Food.com tells you facts about croissants"
+    />
+    <title>About Croissants- food.com</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
@@ -18,8 +22,8 @@
       sheet, in a technique called laminating. The process results in a layered,
       flaky texture, similar to a puff pastry.
     </p>
-    <a href="/">Homepage</a>
-    <a href="/contact.html">Contact us</a>
-    <a href="/photo.html">Photo</a>
+    <a href="/">Food.com Homepage</a>
+    <a href="/contact.html">Contact food.com</a>
+    <a href="/photo.html">Croissant Photo</a>
   </body>
 </html>
