--- a/photo.html
+++ b/photo.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo</title>
+    <meta
+      name="description"
+      content="Food.com shows you pictures of Croissants"
+    />
+    <title>Croissant photo- food.com</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <img src="/src/croissant.jfif" alt="croissant" />
+    <h1>Croissant Photo</h1>
+    <img src="/src/croissant.jfif" alt="picture of a croissant" />
     <br />
-    <a href="/">Homepage</a>
-    <a href="/contact.html">Contact us</a>
-    <a href="/photo.html">Photo</a>
+    <a href="/">Food.com Homepage</a>
+    <a href="/contact.html">Contact food.com</a>
+    <a href="/photo.html">Croissant Photo</a>
   </body>
 </html>
