--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us</title>
+    <meta name="description" content="Food.com contact details" />
+    <title>Contact Us- food.com</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <h1>Contact Us</h1>
     <p>Email us at croissantsareawesome@gmail.com</p>
-    <a href="/">Homepage</a>
-    <a href="/contact.html">Contact us</a>
-    <a href="/photo.html">Photo</a>
+    <a href="/">Food.com Homepage</a>
+    <a href="/contact.html">Contact food.com</a>
+    <a href="/photo.html">Croissant Photo</a>
   </body>
 </html>
