--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <h1>Contact Us</h1>
-    <p>Email us at croissantsareawesome@gmail.com</p>
-    <a href="/">Food.com Homepage</a>
-    <a href="/contact.html">Contact food.com</a>
-    <a href="/photo.html">Croissant Photo</a>
+    <p>to contact food.com, email us at food@gmail.com</p>
+    <a href="/" title="home">Homepage</a>
+    <a href="/contact.html" title="contact food.com">Contact Us</a>
+    <a href="/photo.html" title="croissant photo">Photos</a>
   </body>
 </html>
