--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       sheet, in a technique called laminating. The process results in a layered,
       flaky texture, similar to a puff pastry.
     </p>
-    <a href="/">Food.com Homepage</a>
-    <a href="/contact.html">Contact food.com</a>
-    <a href="/photo.html">Croissant Photo</a>
+    <a href="/" title="home">Homepage</a>
+    <a href="/contact.html" title="contact food.com">Contact Us</a>
+    <a href="/photo.html" title="croissant photo">Photos</a>
   </body>
 </html>
