--- a/photo.html
+++ b/photo.html
@@ -15,8 +15,8 @@
     <h1>Croissant Photo</h1>
     <img src="/src/croissant.jfif" alt="picture of a croissant" />
     <br />
-    <a href="/">Food.com Homepage</a>
-    <a href="/contact.html">Contact food.com</a>
-    <a href="/photo.html">Croissant Photo</a>
+    <a href="/" title="home">Homepage</a>
+    <a href="/contact.html" title="contact food.com">Contact Us</a>
+    <a href="/photo.html" title="croissant photo">Photos</a>
   </body>
 </html>
